microc/tests/expected/err-cmpfunc.uc.out
../examples/err-cmpfunc.uc:[12:11]: execution error: Non-integer arithmetic operation
      if (f > g) { // error: function comparison
            ^

1
